Added OS: WMF 5 to resolve module path error

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@
 #---------------------------------# 
 #      environment configuration  # 
 #---------------------------------# 
+os: WMF 5
 version: 1.0.{build}.0
 install: 
   - cinst -y pester
